[package]
name = "dwat"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.7"
solana-program = "2.1.7"
solana-sdk = "2.1.7"

actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres"] }     # Not using yet
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
dotenv = "0.15.0"

ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"

serde_json = "1.0"